--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,3 +12,19 @@
     padding: 10px;
     float: left ;
 }
+
+.m-sm{
+    margin: 10px;
+}
+.p-sm{
+    padding: 10px;
+}
+.m-md{
+    padding: 15px;
+}
+pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
+.string { color: green; }
+.number { color: darkorange; }
+.boolean { color: blue; }
+.null { color: magenta; }
+.key { color: red; }
